refactoring of API - to be continued
