# REST APIs Implementation/api.js
@@ -1,6 +1,8 @@
 const { app } = require('./index');
 const path = require('path');
 
+const { isLoggedIn } = require('./utils/utils')
+
 /* --- CONTROLLERS --- */
 const userController = require('./controllers/UserController');
 const filmController = require('./controllers/FilmController');
@@ -31,48 +33,43 @@ app.post('/user/login', userController.userLogin);
 
 /*** Defining authentication verification middleware ***/
 
-const isLoggedIn = (req, res, next) => {
-	if (req.isAuthenticated()) {
-		return next();
-	}
-	return res.status(401).json({ error: 'Not authorized' });
-}
 
 
 
 /* --- Film API --- */
 
-app.post('/film', isLoggedIn, (req, res, next) => {
+app.post('/films', isLoggedIn, (req, res, next) => {
 	req.body['owner'] = req.user.id;
 	next();
 }, filmValidation, filmController.createFilm);
 
-app.get('/film/:filmId', isLoggedIn, filmController.getFilm);
-app.put('/film/:filmId', isLoggedIn, filmController.updateFilm);
-app.delete('/film/:filmId', isLoggedIn, filmController.deleteFilm);
+app.get('/films', filmController.getFilms);
+app.get('/films/:filmId', filmController.getFilm);
+app.put('/films/:filmId', isLoggedIn, filmController.updateFilm);
+app.delete('/films/:filmId', isLoggedIn, filmController.deleteFilm);
 
-app.get('/films/owned', isLoggedIn, filmController.getFilmsByOwner);
-app.get('/films/toReview', isLoggedIn, filmController.getFilmsToReview);
+// app.get('/films/owned', isLoggedIn, filmController.getFilmsByOwner);
+// app.get('/films/toReview', isLoggedIn, filmController.getFilmsToReview);
 
-app.get('/films/public', filmController.getPublicFilms);
-app.get('/film/public/:filmId', filmController.getPublicFilm);
+// app.get('/films/public', filmController.getPublicFilms);
+// app.get('/film/public/:filmId', filmController.getPublicFilm);
 
 /* --- Review API --- */
 
-app.post('/review', isLoggedIn, reviewController.issueReview);
-app.post('/automatic/review/:filmId', isLoggedIn, reviewController.issueAutomaticReviews);
-app.put('/review/:filmId/:reviewerId', isLoggedIn, reviewController.updateReview);
-app.delete('/review/:filmId/:reviewerId', isLoggedIn, reviewController.deleteReview);
+app.post('/films/:filmId/reviews', isLoggedIn, reviewController.issueReview);
+app.post('/films/:filmId/automatic', isLoggedIn, reviewController.issueAutomaticReviews);
+app.put('/films/:filmId/reviews/:reviewerId', isLoggedIn, reviewController.updateReview);
+app.delete('/films/:filmId/reviews/:reviewerId', isLoggedIn, reviewController.deleteReview);
 
-app.get('/reviews/public/:filmId', reviewController.getReviews);
-app.get('/reviews/public/:filmId/:reviewerId', reviewController.getReview);
+app.get('/films/:filmId/reviews', reviewController.getReviews);
+app.get('/films/:filmId/reviews/:reviewerId', reviewController.getReview);
 
 
 /* --- LIKE API --- */
 
-app.get('/like/:filmId', likeController.getFilmLikes)
-app.post('/like/:filmId', isLoggedIn, likeController.addLike)
-app.delete('/like/:filmId', isLoggedIn, likeController.deleteLike)
+app.get('/films/:filmId/likes/', likeController.getFilmLikes)
+app.post('/films/:filmId/likes/', isLoggedIn, likeController.addLike)
+app.delete('/films/:filmId/likes/', isLoggedIn, likeController.deleteLike)
 
 
 
